Fix for inner Matrix ‘add new’ block button overflow not working

--- a/supertable/resources/css/SuperTableInput.css
+++ b/supertable/resources/css/SuperTableInput.css
@@ -66,6 +66,7 @@ body.ltr table.editable.superTable tbody tr td:nth-child(2) {
 
 .superTableRow table.editable.superTable {
     margin: 0;
+    display: block;
 }
 
 .superTableRow .rowHeader {
